--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "ui library"
   ],
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve playground/src/main.ts",
     "build": "vue-cli-service build --target lib --name alcalin src/index.ts",
     "lint": "vue-cli-service lint"
   },
@@ -32,10 +32,10 @@
     "vue": "^2.6.10"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.12.0",
-    "@vue/cli-plugin-typescript": "^3.12.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
     "@babel/plugin-proposal-optional-chaining": "^7.7.5",
+    "@vue/cli-plugin-babel": "^3.12.0",
+    "@vue/cli-plugin-typescript": "^3.12.0",
     "@vue/cli-service": "^3.12.0",
     "typescript": "^3.7.4",
     "vue-template-compiler": "^2.6.10"
