--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vue/cli-plugin-babel": "^4.1.2",
     "@vue/cli-plugin-typescript": "^4.1.2",
     "@vue/cli-service": "^4.1.2",
+    "tailwindcss": "^1.1.4",
     "typescript": "^3.7.4",
     "vue-template-compiler": "^2.6.10"
   },
